Codebase cleanup, begin work on hotbar controls & shop. Delete flightstopper. Clean up imports. Add more debug prints to inventory. Clean up PlayerLocation changes to new sendPlayerToLocation method